# math_generator

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  mat.c  shared.h  vec.c
